feat: Выполнил задание 8 спринта, написал тесты и доп задачу